fix : dark mode 진입 시 목차 색상 변경

--- a/src/styles/notion.css
+++ b/src/styles/notion.css
@@ -14,7 +14,7 @@
   @apply my-1;
 }
 
-.notion-table-of-contents {
+.notion-table-of-contents * {
   @apply text-gray-500 dark:text-gray-400;
 }
 
